fix navigation bar overlap error

--- a/danidu_css/contact_us.css
+++ b/danidu_css/contact_us.css
@@ -24,13 +24,14 @@ body{
     width: 1100px;
     min-height: 600px; /* Minimum height, but allow growth */
     height: auto;
-    border-radius: 40px;
+    border-radius: 10px;
     background-color: white;
     overflow: hidden;
-    box-shadow: 0 0 5px 3px rgba(0,0,0,0.4);
+    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+    border: 1px solid #ccc;
     grid-template-columns: repeat(2, 1fr);
     display: grid;
-    z-index: 0;
+    z-index: 1;
 }
 
 .submit_form{
